# maokai

./: CLAUDE.md  Cargo.toml  README.md  install.sh  maokai-cd.sh
src/: lib.rs  main.rs
src/agent/: mod.rs
src/cli/: mod.rs
src/config/: mod.rs
src/prompt/: mod.rs
src/workspace/: alias.rs  editor.rs  mod.rs
src/worktree/: mod.rs
